# FileQueryLanguage

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
data/: README.md  input.txt
src/: CMakeLists.txt  README.md
src/Client/: Main.cpp
src/Common/: Enums.h  Exceptions.h  Utils.h
src/Common/Enums/: DataTypes.h  Operators.h  SortDirection.h
src/Common/Exceptions/: BadArgumentException.h  BaseException.h  DirectoryAlreadyExistingException.h  DirectoryAlreadyExistsException.h  DirectoryException.h  DirectoryExistingException.h  DirectoryNotFoundException.h  FieldException.h  FieldNotFilterableException.h  FieldNotSortableException.h  FieldNotSupportedException.h  FieldNotUpdatableException.h
src/Common/Models/: FileTable.cpp  FileTable.h  FileTableColumn.cpp  FileTableColumn.h  FileTableRow.cpp  FileTableRow.h  Table.cpp  Table.h  TableColumn.cpp  TableColumn.h  TableRow.cpp  TableRow.h
src/Common/Types/: DataTypes.h
src/Common/Utils/: OperatorUtils.h
src/Loaders/: FileTableLoader.cpp  FileTableLoader.h  Loader.h
src/Models/: Table.cpp  Table.h  TableColumn.cpp  TableColumn.h  TableRow.cpp  TableRow.h
src/Parsers/: AST.h  Parser.cpp  Parser.h
src/Parsers/Rules/: Lexer.l  LexerSpecs.l  Parser.y  ParserGrammar.y
src/Parsers/Tree/: AST.h  BaseNode.h  CreateDirNode.cpp  CreateDirNode.h  DirectoryNode.cpp  DirectoryNode.h  DropDirNode.h  SortRuleNode.cpp  SortRuleNode.h  StatementNode.h
src/Parsers/Tree/Clauses/: ClauseNode.h  GroupByNode.cpp  GroupByNode.h  HavingNode.cpp  HavingNode.h  LimitNode.cpp  LimitNode.h  OrderByNode.cpp  OrderByNode.h  SortRuleNode.cpp  SortRuleNode.h  WhereNode.cpp  WhereNode.h
src/Parsers/Tree/Expressions/: ColumnNode.cpp  ColumnNode.h  ExpressionNode.cpp  ExpressionNode.h  FunctionNode.cpp  FunctionNode.h  OperatorNode.cpp  OperatorNode.h  ValueNode.cpp  ValueNode.h
src/Parsers/Tree/Expressions/Values/: BoolNode.h  DoubleNode.h  IntNode.h  StringNode.h  ValueNode.h
src/Parsers/Tree/Statements/: CreateDirNode.cpp  CreateDirNode.h  CreateNode.cpp  CreateNode.h  DeleteNode.cpp  DeleteNode.h  DropDirNode.cpp  DropDirNode.h  DropNode.cpp  DropNode.h  SelectNode.cpp  SelectNode.h  StatementNode.h  UpdateNode.cpp  UpdateNode.h
tests/: CMakeLists.txt  README.md
tools/: README.md
